--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node server/index.js",
     "dev": "nodemon server/index.js"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
